# gpu-learning-au19

./: .gitignore  README.md
01_hello_world/src/: main.rs
02_triangle/: Cargo.toml
02_triangle/src/: lib.rs  main.rs  vertex.frag  vertex.vert
02_triangle/triangle.xcodeproj/: project.pbxproj
02_triangle/triangle.xcodeproj/project.xcworkspace/xcuserdata/zaytsev.xcuserdatad/: UserInterfaceState.xcuserstate
02_triangle/triangle.xcodeproj/xcuserdata/zaytsev.xcuserdatad/xcschemes/: xcschememanagement.plist
03_coordinates/: Cargo.toml  rustfmt.toml
03_coordinates/assets/: bunny.obj.zst  sphere.obj.zst
03_coordinates/class3.xcodeproj/: project.pbxproj
03_coordinates/class3.xcodeproj/project.xcworkspace/xcuserdata/zaytsev.xcuserdatad/: UserInterfaceState.xcuserstate
03_coordinates/class3.xcodeproj/xcuserdata/zaytsev.xcuserdatad/xcschemes/: xcschememanagement.plist
03_coordinates/src/: buffer.rs  buffer_object.rs  depth_image.rs  flat_object.rs  frame_image.rs  geometry.rs  lib.rs  light.rs  main.rs  shader.frag  uniform.rs  vertex.frag  vertex.vert  vertex_buffer.rs
03_coordinates/src/shaders/: frag_shader.glsl  vert_shader.glsl
triangle/: Cargo.toml
triangle/src/: main.rs
