[package]
name = "class3"
version = "0.1.0"
authors = ["Vladimir Zaytsev <zaytsev@uber.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.18.2"
gfx-hal = "0.4.0"
log = "0.4.8"
shaderc = "0.6"
simple_logger = "1.3.0"
winit = "0.19.3"
nalgebra = "0.19"
nalgebra-glm = "0.5.0"
zstd = "0.5.0+zstd.1.4.3"

[features]
default = ["metal"]
metal = ["gfx-backend-metal"]

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.4.0"
optional = true

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
lto = true
panic = "abort"